--- a/yard.css
+++ b/yard.css
@@ -36,7 +36,7 @@ ul li a{
 p{
     color: white;
 }
-span{
+button{
     background-color: purple;
     border-color: yellow;
     color: white
@@ -57,6 +57,7 @@ video{
     height: 200px;
 
 }
+
 
 
 
