--- a/yard.css
+++ b/yard.css
@@ -1,14 +1,15 @@
 body{
-    background-image: conic-gradient(darkred,red,orangered,orange,yellow,
-    yellowgreen,green,darkgreen,darkblue,blue,purple,darkred);
+    background-image: url(img/acke-b-skir_1743546448.webp);
     background-repeat: no-repeat;
-    height: 100vh;
+    background-size: cover;
+    height: 200vh;
 }
 h1{
     color:yellow;
+    background-color: darkgreen;
     text-align: center;
     border-radius: 8px;
-    box-shadow: 4px 4px 30px yellow;
+    box-shadow: 4px 4px 30px orangered;
 }
 
 ul{
@@ -23,26 +24,32 @@ ul li{
 }
 
 ul li a{
-    color: white;
     text-decoration: none;
+    border-radius: 40px;
+    box-shadow: 2px 2px 20px orange;
+    padding: 8px;
+    transition: .4s ease;
+    color: darkblue;
+    background-color: blanchedalmond;
 }
-.lin{
-    box-shadow: 0px 0px 20px yellow;
-    background-color: green;
-    border-radius: 8px;
+ul li a:hover{
+   background-color: white;
+color: red;    
 }
 
 p{
     color: white;
 }
 button{
-    background-color: purple;
+    background-image: conic-gradient(darkred,red,orangered,orange,yellow,
+    yellowgreen,green,darkgreen,darkblue,blue,purple,darkred);
     border-color: yellow;
-    color: white;
+    color: white
 }
 .src{
     height: 40px;
-    width:60%;
+    width:80%;
+    margin-left: 90px;
     border-radius: 5px;
 }
 .header button{
@@ -50,21 +57,59 @@ button{
     width: 60px;
     border-radius: 5px;
 }
-.down{
-    color: yellow;
 
 
 
+.arrange{
+    margin-top: auto;
+}
+
+.arrange .ro{
+    flex-basis: 20%;
+    display: flex;  
+    justify-content: center;
+}
 
 
+.arrange .ro .co img{
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px orange
+}
 
+.array{
+    margin-top: auto;
+}
+.array .row{
+    flex-basis: 20%;
+    display: flex;
+    justify-content: center;
+}
 
-
-
-
-
-
-
-
-
-
+.array .row .col img{
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px orangered;
+    
+}
+span{
+    color: wheat; 
+    background-color: darkslateblue;
+    border-color: white;
+    padding: 2px;
+    box-shadow: 0px 0px 5px white;
+    margin: 10px;
+}
+p{
+    margin-bottom: -2px;
+    margin-left: 5px;
+    box-sizing: border-box;
+    background-color: purple;
+    box-shadow: 0px 0px 20px orangered;
+    border-radius: 5px;
+    padding: 2px;
+}
